# Nika_bot

./: .gitignore  AI_TASKS.md  DEVELOPMENT_STATE.md  README.md  Untitled-1.txt  Useless Emotes by @waifuch.html  add_ai_memory_column.sql  add_profile_columns.sql  check_db.js  cleanup_chroma_db.py  config.js  create_knowledge_table.sql  database.js  debug_search.js  fix_bio_column_type.sql  index.js  init_db.sql  list_models.js  package-lock.json  package.json  personaState.js  qdrantClient.js  refactoring_brief.md  refactoring_kit_2.md  test_ai.js  test_memory_v3_3.js  updates.sql  utils.js  vectorMemory.js
group_chat_bot_python/: .env.example  ECONOMY_BALANCE.md  FEATURE_IDEAS.md  IDEAS_AND_OPTIMIZATIONS.md  MEMORY_AND_FEATURES_ANALYSIS.md  README.md  RENDER_SWITCH.md  TASKS.md  cleanup_supabase_facts.py  main.py  pyproject.toml  requirements.txt
group_chat_bot_python/app/: __init__.py  config.py  models.py  utils.py  web.py
group_chat_bot_python/app/bot/: __init__.py  admin.py  commands.py  feedback.py  (+3 more)
group_chat_bot_python/docs/: prompt_architecture.md
group_chat_bot_python/scratch/: economy_raw.py  fix_formatting.py  games_raw.py  implement_jackpot_weather.py  implement_v2.py  merge_games.py  merge_profile.py  patch_moderate.py  profile_raw.py  refactor.py  refactor_games.py  refactor_profile.py  update_games_final.py
group_chat_bot_python/supabase/: achievements.sql  add_stats_columns.sql  bot_feedback.sql  bot_knowledge.sql  bot_persona_state.sql  chat_settings_flags.sql  debts_and_jail.sql  memory_sync_queue.sql  message_logs.sql  signs_and_ai_images.sql
(+47 files in other folders)
