[project]
name = "group-chat-bot-python"
version = "0.1.0"
description = "Python rewrite of the Telegram group AI bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.29.0,<4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.54.0",
    "supabase>=2.9.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "httpx>=0.27.2",
    "pillow>=11.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
